2002-02-18
----------
* Implemented "export" action, EXPORT_URL in templates

2002-01-20
----------
* Return to referer after action=edit
* released 1.0.4

2001-11-07
----------
* Error when deleting didn't work (undefined subroutine GUI_DB_Error)

2001-09-17
----------
* '-->' in records could break debug comments

2001-08-24
----------
* display correctly '0' in readonly fields (Nico Latzer <nico.latzer@r-kom.de>)

2001-08-13
----------
* example templates: remove FONT SIZE from header for application title,
  make header buttons a bit smaller, add CSS for smaller H1

2001-08-06
----------
* example templates: fix table borders for browsers other than netscape

2001-07-26
----------
* released 1.0.3

2001-06-07
----------
* improve url-encoding for data in the url (reedit)

2001-06-04
----------
* README: fix mailing-list subscription instructions

2001-05-21
----------
* fix problem with the last DBD::Pg version (0.98), reported by
  David Joerg <joerg@iamexwi.unibe.ch>

2001-05-16
----------
* released 1.0.2
* port to PostgreSQL 7.1

2001-03-05
----------
* remove references to admin_user in start script, since it is not anymore used

2001-02-20
----------
* released 1.0.1
* some documentation fixes (Tobi)

2001-02-19
----------
* begun TROUBLESHOOTING section in gedafe-user.pod
* added ACCESS RIGHTS section in gedafe-sql.pod

2001-02-17
----------
* deleted compatibility code for old meta_tables and meta_fields
* improved cookies: path is set and script-name is encoded in cookie name, such
  that there should be no conflicts with other Gedafe applications
* app_site and app_path are not anymore used
  (wrong_url.html template is obsolete)
* gedafed: SITE accepts only one argument (url of the site)
* changed example templates to use DATABASE_DESC to make them not demo-specific
  (as suggested by Brook Milligan <brook@biology.nmsu.edu>)
* new template variable: DATABASE_DESC (COMMENT on database)
* added usage information to gedafe-ctl (daemon-ctl)

2001-02-13