@@ -1,6 +1,7 @@
 2002-02-18
 ----------
 * Implemented "export" action, EXPORT_URL in templates
+* Fix product_combo view in demo1.sql
 
 2002-01-20
 ----------
